--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-simple-modal": "^1.6.1"
+	}
 }
